# CppPilditootlusProjekt

./: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.hpp  Projekti kirjeldus.docx  Projekti kirjeldus.txt  To-Do.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
